<resources>
    <string name="app_name">vhuka</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id or web URI</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">Agree to Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_user_auth">UserAuth</string>
    <string name="action_profile">My Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_signout">Sign Out</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="age">Age</string>
    <string name="title_activity_image">ImageActivity</string>
</resources>
