<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/signup_layout"
    android:padding="20dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signUp"
        android:textColor="@color/colorAccent"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fullName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/fullName"
        android:inputType="textCapWords"
        android:padding="10dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccent" />

    <EditText
        android:id="@+id/userEmailId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccent" />

    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/mobileNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="75567639"
        android:inputType="phone"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="16sp"
        mask:allowed_chars="1234567890"
        mask:mask="+263 7## ### ###"
        app:keep_hint="true"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccent" />
    <EditText

        android:id="@+id/age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/age"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="8dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="16sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccent" />
    <RadioGroup
        android:weightSum="2"
        android:id="@+id/radioSex"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_weight="1"
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:textColor="@color/white"
            android:checked="true" />

        <RadioButton
            android:textColor="@color/white"
            android:layout_weight="1"
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_female" />

    </RadioGroup>


    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@color/colorAccent" />

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/terms_conditions"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/signUp"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/already_user"
        android:textColor="@color/white"
        android:textSize="13sp" />

</LinearLayout>